separated out styles only for sermons (page-images); styles for header/footer

--- a/html/sermons.css
+++ b/html/sermons.css
@@ -1,14 +1,6 @@
+@import "lincoln.css";
+/* settings to make page images appear to the left of the text */
 body { margin-left: 100; }
-body {margin-right: 100; }
-p.headings {margin-top: 0;}
-p.headings {margin-bottom: 1;}
-p.href {font-size: 0;}
-img { float: left; } 
-p.urefs {margin-top: 2;}
-p.urefs {margin-bottom:2;}
-p.urefs {margin-left: 200;}
-p.lrefs {margin-top: 2;}
-
-
-
-
+p.pageimage, p.pagebreak { margin-left: -75; clear: left;}
+hr.pb { float: right; width: 100%; } 
+img.page { float: left; clear: left;} 
