--- a/html/lincoln.css
+++ b/html/lincoln.css
@@ -3,6 +3,9 @@ a { color:  #02023a; }
 a:visited { color: #660000; }
 a:hover { background: #ebebeb; }
 
+span.author { font-weight: bold; }
+li.sermon { list-style-type: circle; padding-left: 15; text-indent: -15px; }
+
 /* styles for the header and footer */
 div.header, div.footer { center: true; text-align: center; width: 665px; margin: auto; }
 div.header { border: 3px solid #02023a;} 
