--- a/trunk/html/lincoln.css
+++ b/trunk/html/lincoln.css
@@ -1,3 +1,5 @@
+@import "highlight.css";
+
 /* link colors to match header */
 a { color:  #02023a; }
 a:visited { color: #660000; }
@@ -19,7 +21,7 @@ span.author { font-weight: bold; }
 li.sermon { list-style-type: circle; padding-left: 15px; text-indent: -15px; }
 
 /* styles for the header and footer */
-div.header, div.footer { text-align: center; width: 800px; /*665px;*/ margin: auto; }
+div.header, div.footer { center: true; text-align: center; width: 665px; margin: auto; clear: both; }
 div.header { border: 3px solid #02023a;} 
 div.header h1 { font-size: 36pt; margin: -1px; }
 div.header h2 { font-size: 13pt; margin: -4px; }
@@ -29,6 +31,8 @@ div.header p {margin: 0px; }
 div.header p.links,div.footer p.links { border-top: 2px solid #000033; margin: 5px; text-align: center; vertical-align: middle; font-size: 90%; color: #000033;}
 div.header p#nav { width: 50%;}
 div.header p#resources {clear: left;}
+div.footer p#nav { border: none }
+p.clear { clear: left; }
 div.footer p#nav-foot { border: none }
 
 /*styles for the index page */
