--- a/trunk/html/sermons.css
+++ b/trunk/html/sermons.css
@@ -1,6 +1,8 @@
 @import "lincoln.css";
+
 /* settings to make page images appear to the left of the text */
 body { margin-left: 100; }
 p.pageimage, p.pagebreak { margin-left: -75; clear: left;}
 hr.pb { float: right; width: 100%; } 
-img.page { float: left; clear: left;} 
+/* note: this is hard-coded to thumnbnail size, to contain in case image is missing */
+img.page { float: left; clear: left; width: 46px; height: 72px;} 
