--- a/html/lincoln.css
+++ b/html/lincoln.css
@@ -23,20 +23,22 @@ li.sermon { list-style-type: circle; padding-left: 15px; text-indent: -15px; }
 /* styles for the header and footer */
 div.header, div.footer { text-align: center; width: 665px; margin: auto; }
 /*div.header, div.footer { center: true; text-align: center; width: 665px; margin: auto; clear: both; }*/
-div.header { border: 3px solid #02023a;} 
-div.header h1 { font-size: 36pt; margin: -1px; }
-div.header h2 { font-size: 13pt; margin: -4px; }
+div.header { border: 3px solid #02023a; text-align:center;} 
+
+div.header h1 { font-family: Book Antiqua; font-size: 36pt; margin: -1px; line-height:120%;}
+div.header h2 { font-family: Book Antiqua; font-size: 13pt; margin: -4px; line-height:120%;}
+
+/*div.header h1 { font-size: 36pt; margin: -1px; background-color:red;}*/
+/*div.header h2 { font-size: 13pt; margin: -4px; background-color:green;}*/
 div.header a { text-decoration: none; padding-right: 1px; padding-left: 1px; }
-div.header img { float: left;} 
+div.header img#head{margin-top:4px; float: left;}
 div.header p {margin: 0px; }
 div.header p.links,div.footer p.links { border-top: 2px solid #000033; margin: 5px; text-align: center; vertical-align: middle; font-size: 90%; color: #000033;}
-div.header p#nav { width: 50%;}
+div.header p#nav {margin-left:2in; margin-right:2in; margin-bottom:-4px; }
 div.header p#resources {clear: left;}
 div.footer p#nav { border: none }
 p.clear { clear: left; }
-
 div.footer p#nav-foot { border: none }
-
 /*styles for the index page */
 
 
