--- a/html/lincoln.css
+++ b/html/lincoln.css
@@ -17,16 +17,22 @@ div.content
 h1 { font-family: Book Antiqua; color: #660000; }
 h2 { font-family: Book Antiqua; color: #000033; font-stretch: narrower;}
 span.star {font-weight: bold;}
-span.author { font-weight: bold; font-size:200%;}
+span.author { font-weight: bold; font-size:125%;}
 li.sermon { list-style-type: circle; padding-left: 15px; text-indent: -15px; }
 
 /* styles for the header and footer */
-div.header, div.footer { text-align: center; width: 665px; margin: auto; }
+div.header, div.footer { text-align: center; width: 700px;  /*width: 665px;*/ margin: auto; }
 /*div.header, div.footer { center: true; text-align: center; width: 665px; margin: auto; clear: both; }*/
 div.header { border: 3px solid #02023a; text-align:center;} 
 
 div.header h1 { font-family: Book Antiqua; font-size: 36pt; margin: -1px; line-height:120%;}
 div.header h2 { font-family: Book Antiqua; font-size: 13pt; margin: -4px; line-height:120%;}
+p.searchbox{font-size:80%; width=50%; text-align:center; margin-left:5px; background-color: #eeeeee; padding:4px; }
+/*p.searchbox{font-size:80%; text-align:center; margin-left:5px; background-color: #eeeeee; padding:4px; }*/
+p.searchbox b {padding-right: 5px;}
+p.searchbox input#go{margin-left:5px;}
+
+
 
 /*div.header h1 { font-size: 36pt; margin: -1px; background-color:red;}*/
 /*div.header h2 { font-size: 13pt; margin: -4px; background-color:green;}*/
@@ -39,7 +45,17 @@ div.header p#resources {clear: left;}
 div.footer p#nav { border: none }
 p.clear { clear: left; }
 div.footer p#nav-foot { border: none }
+
 /*styles for the index page */
+
+/*styles for the search page*/
+div.content#search {text-align: center; width:80%; margin:auto;}
+div.content#search h2 {text-align:center;}
+table.searchform { align:center; padding-left: 5px; padding-bottom: 5px; width: 665px;}
+table.searchform th {text-align: right; width:2in; }
+table.searchform h4 {text-align: center;}
+table.searchform td.input {padding-left:4px; text-size:70%; padding:5px; background-color: #eeeeee;}
+ul.searchtips {float:right; width: 30%; height: 4in; text-align:left;}
 
 
 div#overview {margin: 1in; margin-top:0.5in;}
