--- a/html/sermons.css
+++ b/html/sermons.css
@@ -1,7 +1,7 @@
 @import "lincoln.css";
 
 /* settings to make page images appear to the left of the text */
-body { margin-left: 100; }
+div.content { margin-left: 100; }
 p.pageimage, p.pagebreak { margin-left: -75; clear: left;}
 hr.pb { float: right; width: 100%; } 
 /* note: this is hard-coded to thumnbnail size, to contain in case image is missing */
