--- a/html/lincoln.css
+++ b/html/lincoln.css
@@ -49,13 +49,17 @@ div.footer p#nav-foot { border: none }
 /*styles for the index page */
 
 /*styles for the search page*/
-div.content#search {text-align: center; width:80%; margin:auto;}
+div.content#search {vertical-align:top; text-align: left; width:80%; margin:auto;}
 div.content#search h2 {text-align:center;}
-table.searchform { align:center; padding-left: 5px; padding-bottom: 5px; width: 665px;}
+table.searchtable {vertical-align:top; width: 90%;}
+table.searchtable td{vertical-align:top;}
+td.searchtips {width:30%;}
+table.searchform { vertical-align:top; align:left; padding-left: 5px; padding-bottom: 5px; width: 100%;}
 table.searchform th {text-align: right; width:2in; }
 table.searchform h4 {text-align: center;}
 table.searchform td.input {padding-left:4px; text-size:70%; padding:5px; background-color: #eeeeee;}
-ul.searchtips {float:right; width: 30%; height: 4in; text-align:left;}
+p.searchtips {text-align:center;}
+/*ul.searchtips {width: 100%; /*height: 4in;*/ text-align:left; border: 2px solid #0000FF;}*/
 
 
 div#overview {margin: 1in; margin-top:0.5in;}
