--- a/trunk/html/lincoln.css
+++ b/trunk/html/lincoln.css
@@ -25,8 +25,8 @@ div.header, div.footer { text-align: center; width: 700px;  /*width: 665px;*/ ma
 /*div.header, div.footer { center: true; text-align: center; width: 665px; margin: auto; clear: both; }*/
 div.header { border: 3px solid #02023a; text-align:center;} 
 
-div.header h1 { font-family: Book Antiqua; font-size: 36pt; margin: -1px; line-height:120%;}
-div.header h2 { font-family: Book Antiqua; font-size: 13pt; margin: -4px; line-height:120%;}
+div.header h1 { font-family: "Book Antiqua", "Times",serif; font-size: 36pt; margin: -1px; line-height:120%;}
+div.header h2 { font-family: "Book Antiqua", "Times",serif; font-size: 13pt; margin: -4px; line-height:120%;}
 p.searchbox{font-size:80%; width=50%; text-align:center; margin-left:5px; background-color: #eeeeee; padding:4px; }
 /*p.searchbox{font-size:80%; text-align:center; margin-left:5px; background-color: #eeeeee; padding:4px; }*/
 p.searchbox b {padding-right: 5px;}
@@ -58,7 +58,8 @@ table.searchform { vertical-align:top; align:left; padding-left: 5px; padding-bo
 table.searchform th {text-align: right; width:2in; }
 table.searchform h4 {text-align: center;}
 table.searchform td.input {padding-left:4px; text-size:70%; padding:5px; background-color: #eeeeee;}
-p.searchtips {text-align:center;}
+p.searchtips {text-align: center;}
+p.center {align: center;}
 /*ul.searchtips {width: 100%; /*height: 4in;*/ text-align:left; border: 2px solid #0000FF;}*/
 
 
