--- a/html/lincoln.css
+++ b/html/lincoln.css
@@ -1,9 +1,10 @@
 @import "highlight.css";
 
 /* link colors to match header */
-a { color:  #02023a; }
+a:link { color:  #02023a; }
 a:visited { color: #660000; }
-a:hover { background: #ebebeb; }
+a:link:hover { background: #ebebeb; }
+/* note: color & background is for links only, not anchors */
 
 body {
      text-align:center;
@@ -64,3 +65,13 @@ p.searchtips {text-align:center;}
 
 div#overview {margin: 1in; margin-top:0.5in;}
 
+table.searchresults { width:90%;  border-collapse: collapse; }
+table.searchresults td { border-bottom: 1px solid #cccccc; }
+td.count { width:15%; text-align: center; }
+th.tip { font-size: 85%; font-weight: normal; font-style: italic; text-align: center; }
+
+/* styles for full-size page image display  */
+p.fullpage { text-align:center; }
+p.fullpage img { border: 1px solid #02023a; }
+table.pagenav { width: 100%; }
+td.desc {text-align:center;}
