--- a/branches/php5/html/lincoln.css
+++ b/branches/php5/html/lincoln.css
@@ -74,6 +74,7 @@ table.searchresults { width:90%;  border-collapse: collapse; }
 table.searchresults td { border-bottom: 1px solid #cccccc; }
 table.kwicsearchresults { width:90%; }
 td.count { width:15%; text-align: center; }
+td.link {width:25px; font-size:75%; text-align:center;}
 th.tip { font-size: 85%; font-weight: normal; font-style: italic; text-align: center; }
 
 /* link results - display as horizontal list, inline, with lines between */
