--- a/branches/php5/html/lincoln.css
+++ b/branches/php5/html/lincoln.css
@@ -43,6 +43,7 @@ div.header p {margin: 0px; }
 div.header p.links,div.footer p.links { border-top: 2px solid #000033; margin: 5px; text-align: center; vertical-align: middle; font-size: 90%; color: #000033;}
 div.header p#nav {margin-left:2in; margin-right:2in; margin-bottom:-4px; }
 div.header p#resources {clear: left;}
+div.footer { padding-top: 10px; }
 div.footer p#nav { border: none }
 p.clear { clear: left; }
 div.footer p#nav-foot { border: none }
@@ -76,6 +77,7 @@ table.kwicsearchresults { width:90%; }
 td.count { width:15%; text-align: center; }
 td.link {width:25px; font-size:75%; text-align:center;}
 th.tip { font-size: 85%; font-weight: normal; font-style: italic; text-align: center; }
+span.term-totals { font-size: 85%; }
 
 /* link results - display as horizontal list, inline, with lines between */
 li.resultlink, li.firstresultlink { 
