--- a/trunk/html/lincoln.css
+++ b/trunk/html/lincoln.css
@@ -28,7 +28,7 @@ div.header { border: 3px solid #02023a; text-align:center;}
 
 div.header h1 { font-family: "Book Antiqua", "Times",serif; font-size: 36pt; margin: -1px; line-height:120%;}
 div.header h2 { font-family: "Book Antiqua", "Times",serif; font-size: 13pt; margin: -4px; line-height:120%;}
-p.searchbox{font-size:80%; width=50%; text-align:center; margin-left:5px; background-color: #eeeeee; padding:4px; }
+p.searchbox{font-size:80%; width:50%; text-align:center; background-color: #eeeeee; padding:4px; }
 /*p.searchbox{font-size:80%; text-align:center; margin-left:5px; background-color: #eeeeee; padding:4px; }*/
 p.searchbox b {padding-right: 5px;}
 p.searchbox input#go{margin-left:5px;}
@@ -56,13 +56,13 @@ div.content#search h2 {text-align:center;}
 table.searchtable {vertical-align:top; width: 90%;}
 table.searchtable td{vertical-align:top;}
 td.searchtips {width:30%;}
-table.searchform { vertical-align:top; align:left; padding-left: 5px; padding-bottom: 5px; width: 100%;}
+table.searchform { vertical-align:top; text-align:left; padding-left: 5px; padding-bottom: 5px; width: 100%;}
 table.searchform th {text-align: right; width:2in; }
 table.searchform h4 {text-align: center;}
-table.searchform td.input {padding-left:4px; text-size:70%; padding:5px; background-color: #eeeeee;}
+table.searchform td.input {padding-left:4px; font-size:70%; padding:5px; background-color: #eeeeee;}
 p.searchtips {text-align: center;}
-p.center {align: center;}
-/*ul.searchtips {width: 100%; /*height: 4in;*/ text-align:left; border: 2px solid #0000FF;}*/
+p.center {text-align: center;}
+/*ul.searchtips {width: 100%; height: 4in; text-align:left; border: 2px solid #0000FF;}*/
 
 
 div#overview {margin: 1in; margin-top:0.5in;}
@@ -70,7 +70,7 @@ div#overview {margin: 1in; margin-top:0.5in;}
 span.match { font-weight: bold;}	
 p.kwic { margin: 5px 0.5in 5px 0.5in; border-bottom: 1px solid #cccccc;}
 table.kwic { margin: 5px 0.5in 5px 0.5in; border-bottom: 1px solid #cccccc;}
-table.kwic td.pn { width: 65px; vertical-align: center;}
+table.kwic td.pn { width: 65px; vertical-align: middle;}
 
 table.searchresults { width:90%;  border-collapse: collapse; }
 table.searchresults td { border-bottom: 1px solid #cccccc; }
