--- a/trunk/src/web/css/lincoln.css
+++ b/trunk/src/web/css/lincoln.css
@@ -28,7 +28,7 @@ div.header { border: 3px solid #02023a; text-align:center;}
 
 div.header h1 { font-family: "Book Antiqua", "Times",serif; font-size: 36pt; margin: -1px; line-height:120%;}
 div.header h2 { font-family: "Book Antiqua", "Times",serif; font-size: 13pt; margin: -4px; line-height:120%;}
-p.searchbox{font-size:80%; width:50%; text-align:center; background-color: #eeeeee; padding:4px; }
+p.searchbox{font-size:80%; /*width:50%;*/ text-align:center; background-color: #eeeeee; padding:4px; }
 /*p.searchbox{font-size:80%; text-align:center; margin-left:5px; background-color: #eeeeee; padding:4px; }*/
 p.searchbox b {padding-right: 5px;}
 p.searchbox input#go{margin-left:5px;}
